Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/PlainTry.out
PlainTry.java:10:9: compiler.err.try.without.catch.finally.or.resource.decls
1 error
